Fixed layout issues... somehow... ??

--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -6,24 +6,24 @@ html, body {
 #filterer {
     position: fixed;
     top: 6px;
-    width: 23%;
+    left: 0px;
 }
 
 #browser {
     position: fixed;
     top: 40px;
-    height: 100%;
-    width: 23%;
+    left: 0px;
 }
 
 #viewer {
-    position: relative;
-    top: 10px;
-    left: 25%;
-    width: 70%;
+    padding-top: 12px;
+    overflow-x: auto;
     min-height: 100%;
-    overflow: auto;
-    padding-top: 3px;
+
+    // Fixes a weird problem in Chrome:
+    // after changing note, #viewer is invisible until page resize
+    float: none;
+    padding-left: 10px;
 }
 
 @media print {
