--- a/app/assets/stylesheets/notes.css.scss
+++ b/app/assets/stylesheets/notes.css.scss
@@ -16,7 +16,11 @@
     }
 
     .body {
-        clear: both;
+        h1,h2,h3,h4 {
+            &:first-child {
+                margin-top: 0px;
+            }
+        }
 
         h1 {
             font-size: 1.7em;
